--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run bundle",
-    "bundle": "babel index.js -o ./cli.js"
+    "bundle": "babel index.js -o ./cli.js",
+    "dev": "onchange './index.js' -- npm run bundle"
   },
   "keywords": [
     "stylelint-config",
@@ -22,13 +23,16 @@
     "stylelint": "^7.2.0"
   },
   "dependencies": {
-    "lodash": "^4.15.0",
+    "boxen": "^0.6.0",
+    "chalk": "^1.1.3",
+    "cli-table": "^0.3.1",
     "meow": "^3.7.0",
-    "stylelint-config-wilco": "^1.0.0"
+    "stylelint-config-wilco": "*"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0"
+    "babel-preset-es2015": "^6.14.0",
+    "onchange": "^3.0.0"
   },
   "babel": {
     "presets": [
