--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "preferGlobal": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava",
+    "pretest": "standard --verbose | snazzy",
     "prepublish": "npm run bundle",
     "bundle": "babel index.js -o ./cli.js",
     "dev": "onchange './index.js' -- npm run bundle"
@@ -19,20 +20,27 @@
   ],
   "author": "charles peters <charlespeters42@gmail.com> (https://charlespeters.net)",
   "license": "MIT",
-  "peerDependencies": {
-    "stylelint": "^7.2.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/charlespeters/wilco.git"
   },
   "dependencies": {
     "boxen": "^0.6.0",
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "meow": "^3.7.0",
+    "stylelint": "^7.6.0",
     "stylelint-config-wilco": "*"
   },
   "devDependencies": {
+    "ava": "^0.16.0",
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
-    "onchange": "^3.0.0"
+    "babel-register": "^6.14.0",
+    "execa": "^0.5.0",
+    "onchange": "^3.0.0",
+    "snazzy": "^5.0.0",
+    "standard": "^8.6.0"
   },
   "babel": {
     "presets": [
